# amazon_cloud_code_generator

./: CONTRIBUTING.md  README.md  commit_modules.sh  demo_ccapi.yml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
amazon_cloud_code_generator/: generator.py
amazon_cloud_code_generator/cmd/: generator.py  refresh_examples.py  refresh_modules.py  refresh_schema.py  resources.py  test_generator.py  test_refresh_modules.py  test_utils.py  utils.py
amazon_cloud_code_generator/config/: modules.yaml  vars.yaml
amazon_cloud_code_generator/data/plugins/module_utils/: core.py  utils.py  waiters.py
amazon_cloud_code_generator/data/tests/unit/module_utils/: test_core.py  (+1 more)
amazon_cloud_code_generator/module_utils/: core.py  utils.py
amazon_cloud_code_generator/templates/: default_module.j2  header.j2  loggroup.py  mod_util_core.py  s3_bucket.py
cloud/plugins/modules/: backup_backup_vault.py  backup_framework.py  backup_report_plan.py  cloudtrail_event_data_store.py  cloudtrail_trail.py  cloudwatch_composite_alarm.py  cloudwatch_metric_stream.py  dynamodb_global_table.py  eks_addon.py  eks_cluster.py  eks_fargate_profile.py  iam_role.py  iam_server_certificate.py  kms_alias.py  kms_replica_key.py  lambda_code_signing_config.py  lambda_event_source_mapping.py  lambda_function.py  logs_log_group.py  logs_query_definition.py  logs_resource_policy.py  rds_db_proxy.py  rds_db_proxy_endpoint.py  redshift_cluster.py  redshift_endpoint_access.py  redshift_endpoint_authorization.py  redshift_event_subscription.py  redshift_scheduled_action.py  route53_dnssec.py  route53_key_signing_key.py  s3_access_point.py  s3_bucket.py  s3_multi_region_access_point.py  s3_multi_region_access_point_policy.py  s3objectlambda_access_point.py  s3objectlambda_access_point_policy.py
docs/adr/: 0001-record-architecture-decisions.md  0002-limit-dependence-on-amazon-aws-collection.md
gouttelette/config/amazon_cloud/: modules.yaml
gouttelette/data/plugins/module_utils/: core.py  utils.py
gouttelette/templates/amazon_cloud/: default_module.j2
plugins/connection/: aws.py
tests/unit/: test_generator.py  test_refresh_modules.py  test_utils.py
tests/unit/fixtures/: expected_content.json  modules.yaml
(+11 files in other folders)
