[metadata]
name = amazon_cloud_code_generator
summary = Set of tools used to prepare the amazon.cloud collection
description-file =
    README.md
author = Ansible Cloud team
home-page = https://www.ansible.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[files]
packages = amazon_cloud_code_generator
package-data = amazon_cloud_code_generator =
    templates/*.j2
data-files =
    amazon_cloud_code_generator/aws_cloudformation_schemas = aws_cloudformation_schemas/*
    amazon_cloud_code_generator/config = config/*
    amazon_cloud_code_generator/module_utils = module_utils/*

[entry_points]
console_scripts =
    amazon_cloud_code_generator_refresh_modules = amazon_cloud_code_generator.cmd.refresh_modules:main
    amazon_cloud_code_generator_refresh_examples = amazon_cloud_code_generator.cmd.refresh_examples:main
